# QHYCCD_Linux

./: 85-qhy.rules  85-qhyccd.rules  AUTHORS  CMakeLists.txt  INSTALL  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libqhy.0.dylib  libtool  qhyccd.h  qhyccdcamdef.h  qhyccdstruct.h
autom4te.cache/: output.1  requests  traces.0  traces.1
demo/: ic8300  ic8300.cpp
demo/QHY5LII-M/: initandcapture.cpp
examples/: README.md  qhy5liiviewer.c
examples/IC8300/: IC8300.c  IC8300.cpp  Makefile
examples/QTDemo/: ChangeLog  ccd.pro  configure  readme  readme.en  readme.ru  shutter
examples/QTDemo/include/: about.h  camera.h  ccd.h  configwnd.h  debayer.h  dib.h  graph.h  histogramwnd.h  image.h  lusb.h  maindef.h  params.h  photovideownd.h  sessionswnd.h  tiff.h  timer.h  ui_device_base.h  utils.h
examples/QTDemo/include/device_ui/: cam_ui_ic8300.h  cam_ui_null.h  cam_ui_qhy5.h  cam_ui_qhy5lii.h  cam_ui_qhy6.h  cam_ui_qhy8l.h
examples/QTDemo/include/devices/: cam_ic8300.h  cam_null.h  cam_qhy5.h  cam_qhy5lii.h  cam_qhy6.h  cam_qhy8l.h  qhy5_core.h  qhy5lii_core.h  qhy6_core.h
examples/QTDemo/shutter_procs/: Makefile  canon350d.c  zshutter
examples/QTDemo/src/: about.cpp  camera.cpp  ccd.cpp  configwnd.cpp  debayer.cpp  dib.cpp  graph.cpp  histogramwnd.cpp  image.cpp  lusb.cpp  main.cpp  maindef.cpp  params.cpp  photovideownd.cpp  sessionswnd.cpp  tiff.cpp  ui_device_base.cpp  utils.cpp
examples/QTDemo/src/device_ui/: cam_ui_ic8300.cpp  cam_ui_null.cpp  cam_ui_qhy5.cpp  cam_ui_qhy5lii.cpp  cam_ui_qhy6.cpp  cam_ui_qhy8l.cpp
examples/QTDemo/src/devices/: cam_ic8300.cpp  cam_null.cpp  cam_qhy5.cpp  cam_qhy5lii.cpp  cam_qhy6.cpp  cam_qhy8l.cpp  qhy5_core.cpp  qhy5lii_core.cpp  qhy6_core.cpp
examples/QTDemo/ui/: about.ui  ccd.ui  configwnd.ui  devicewnd.ui  histogramwnd.ui  photovideownd.ui  sessionswnd.ui
examples/QTDemo/ui/device_ui/: cam_ui_ic8300.ui  cam_ui_null.ui  cam_ui_qhy5.ui  cam_ui_qhy5lii.ui  cam_ui_qhy6.ui  (+2 more)
examples/QTDemo/utils/: qhy6reset.sh  qhy8lreset.sh  qhy9reset.sh
firmware/: Makefile  Makefile.am  Makefile.in  QHY16200A.HEX  QHY695A.HEX  QHY90A.HEX  QHYXXX.HEX
sample/: CMakeLists.txt  CaptureDarkFrame.cpp  CheckColorCameraBayerFormat.cpp  LiveFrameSample.cpp  OSXDownloadFirmware2Camera.cpp  SingleFrameSample.cpp
src/: CMakeLists.txt  QHYCAM.c  QHYCAM.h  TestSerial.c  common.c  common.cpp  common.h  cssl.cpp  ic8300.cpp  ic8300.h  img2p.cpp  img2p.h  interguider.c  interguider.cpp  interguider.h  oledcontrol.c  oledcontrol.h  qhy10.cpp  qhy10.h  qhy11.cpp  qhy11.h  qhy12.cpp  qhy12.h  qhy16000.cpp  qhy16000.h  qhy21.cpp  qhy21.h  qhy22.c  qhy22.cpp  qhy22.h  qhy23.cpp  qhy23.h  qhy5ii.c  qhy5ii.cpp  qhy5ii.h  qhy5lii.c  qhy5lii.cpp  qhy5lii.h  qhy5lii_c.cpp  qhy5lii_c.h  (+32 more)
udev/: 85-qhyccd.rules  Makefile  Makefile.am  Makefile.in
